data/derived/sp14/progs/unify/prog4460.ml.out
Characters 109-110:
  | Cosine u ->  cos (pi *. (eval u))
                                  ^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
